[gd_scene load_steps=16 format=3 uid="uid://dgrqtap1b88jc"]

[ext_resource type="Script" uid="uid://fhcjy3q8th6f" path="res://scenes/enemies/enemy.gd" id="1_5gtpj"]
[ext_resource type="Texture2D" uid="uid://bdnfi56v4wrga" path="res://sprites/enemies/spider/shadow.png" id="2_hgmsc"]
[ext_resource type="SpriteFrames" uid="uid://dmqi7x668snod" path="res://scenes/enemies/defaultanims.tres" id="2_rgxm2"]
[ext_resource type="Texture2D" uid="uid://yxmbieerd0vm" path="res://sprites/enemies/spider/spiderrubble.png" id="4_16w8m"]
[ext_resource type="Texture2D" uid="uid://ccksl6g3xb33b" path="res://sprites/enemies/exclamation.png" id="4_bdfsr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hgmsc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_16w8m"]
radius = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ckomf"]
atlas = ExtResource("4_bdfsr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dmb4"]
atlas = ExtResource("4_bdfsr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x02kv"]
atlas = ExtResource("4_bdfsr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ab1y"]
atlas = ExtResource("4_bdfsr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lph2"]
atlas = ExtResource("4_bdfsr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_51l6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckomf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lph2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckomf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lph2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckomf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lph2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckomf")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"alert",
"speed": 18.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_16w8m"]
particles_animation = true
particles_anim_h_frames = 12
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_16w8m"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 87.192
initial_velocity_min = 2.08
initial_velocity_max = 97.91
angular_velocity_min = -249.0
angular_velocity_max = 213.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 98, 0)
anim_offset_max = 1.0

[node name="Enemy" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
collision_layer = 4
collision_mask = 23
script = ExtResource("1_5gtpj")
max_health = 6
move_speed = 30.0
launch_speed = 200.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hgmsc")

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource("CircleShape2D_16w8m")

[node name="BiteBox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteBox"]
shape = SubResource("CircleShape2D_16w8m")

[node name="Visual" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="SpriteLift" type="Node2D" parent="Visual"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visual/SpriteLift"]
position = Vector2(1, -7)
sprite_frames = ExtResource("2_rgxm2")
animation = &"attack"

[node name="Shadow" type="Sprite2D" parent="Visual"]
texture_filter = 1
position = Vector2(-1.49012e-08, -1)
rotation = -0.174533
texture = ExtResource("2_hgmsc")

[node name="AlertAnim" type="AnimatedSprite2D" parent="Visual"]
z_index = 1
position = Vector2(1, -35)
sprite_frames = SubResource("SpriteFrames_51l6c")
animation = &"alert"
frame = 25
frame_progress = 1.0

[node name="DieParticles" type="GPUParticles2D" parent="Visual"]
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_16w8m")
emitting = false
amount = 10
texture = ExtResource("4_16w8m")
lifetime = 0.8
one_shot = true
speed_scale = 2.53
randomness = 0.32
process_material = SubResource("ParticleProcessMaterial_16w8m")

[connection signal="body_entered" from="BiteBox" to="." method="_on_attack_zone_body_entered"]
